--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "scripts": {
         "build-lib": "webpack -p --config=./webpack.config.lib.js",
         "build-demo": "webpack -p --config=./webpack.config.demo.js",
-        "build": "npm run build-lib & npm run build-demo"
+        "build": "npm run build-lib & npm run build-demo",
+        "start-dev": "webpack-dev-server --config=./webpack.config.demo.js"
     },
     "devDependencies": {
         "html-webpack-plugin": "^3.2.0",
         "webpack": "^4.40.2",
-        "webpack-cli": "^3.3.8"
+        "webpack-cli": "^3.3.8",
+        "webpack-dev-server": "^3.8.1"
     }
 }
