--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "main": "./dist/lib/index.js",
     "scripts": {
         "build-lib": "webpack -p --config=./webpack.config.lib.js",
-        "build-demo": "webpack -p --config=./webpack.config.demo.js",
-        "build": "npm run build-lib & npm run build-demo",
-        "start-dev": "webpack-dev-server --config=./webpack.config.demo.js"
+        "build-docs": "webpack -p --config=./webpack.config.docs.js",
+        "build": "npm run build-lib & npm run build-docs",
+        "start-dev": "webpack-dev-server --config=./webpack.config.docs.js"
     },
     "devDependencies": {
         "html-webpack-plugin": "^3.2.0",
